Label date wrap issue done

--- a/src/entities/country-card-detail/ui/country-card-detail.module.css
+++ b/src/entities/country-card-detail/ui/country-card-detail.module.css
@@ -4,14 +4,15 @@
     grid-template-rows: 100%;
     grid-template-columns: 50% 50%;
 
+    grid-column-gap: 30px;
+
     width: 100%;
 
     margin: 50px;
 }
 
 .c-country-card-detail__flag-div {
-    width: 50%;
-    height: 50%;
+    aspect-ratio:  auto 280 / 160;
 }
 
 .c-country-card-detail__data-div {
@@ -21,12 +22,12 @@
     align-self: flex-start;
 }
 
-.c-country-card-detail__name-div{
+.c-country-card-detail__name-div {
     width: 100%;
     height: fit-content;
 }
 
-.c-country-card-detail__label-data-div{
+.c-country-card-detail__label-data-div {
     width: 50%;
     height: fit-content;
 }
