--- a/src/shared/ui/flag.module.css
+++ b/src/shared/ui/flag.module.css
@@ -1,4 +1,5 @@
 .c-img {
+    display: block;
     width: 100%;
     height: 100%;
 }
