--- a/src/shared/ui/label-data.module.css
+++ b/src/shared/ui/label-data.module.css
@@ -1,8 +1,11 @@
-c-label-data {
-    display: inline;
+.c-label-data {
+    display: flex;
+    max-width: 99%;
 }
 
 .c-label-data__key {
+    white-space: nowrap;
+    text-wrap: none;
     font-weight: 800;
     font-size: 0.8em;
     margin-right: 5px;
